Fix alignment main menu

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -141,6 +141,8 @@ textarea {
     width: $toolbar-height;
     height: $toolbar-height;
     text-align: center;
+    margin-left: 5px;
+    margin-right: 5px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -266,6 +268,10 @@ ng-view {
 }
 
 // glyphicon contents
+.glyphicon-open-left {
+    margin-left: 0;
+    margin-right: 0;
+}
 .glyphicon-open-left:before {
     content: "\e055";
 }
